<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context="com.example.nuria.entrega1.LoginActivity">


    <TextView
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTurquesa"
        android:text="@string/user"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/user_field"
        android:layout_below="@id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:theme="@style/MyEditText"
        android:textSize="18sp"
        android:hint="@string/userType"
        android:textColorHint="@color/colorLightGrey"/>


    <TextView
        android:id="@+id/pw_text"
        android:layout_below="@id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTurquesa"
        android:text="@string/password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/pw_field"
        android:layout_below="@id/pw_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword"
        android:theme="@style/MyEditText"
        android:textSize="18sp"
        android:hint="@string/passwordType"
        android:textColorHint="@color/colorLightGrey"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/accept"
        android:theme="@style/MyButton"/>

</RelativeLayout>
