<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context="com.example.nuria.entrega1.RecoverPwActivity">

    <TextView
        android:id="@+id/recover_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTurquesa"
        android:text="@string/recover"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/user_field"
        android:layout_below="@id/recover_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:hint="@string/email"
        android:textColorHint="@color/colorLightGrey"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:theme="@style/MyEditText"
        android:textSize="18sp"
        android:padding="12dp"/>

        <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:theme="@style/MyButton"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:theme="@style/MyButton"/>
    </LinearLayout>
</RelativeLayout>
