<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nuria.entrega1.MainActivity">


    <!--HEADER-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">
        <View
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorDarkGrey"
            android:id="@+id/name"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgheader"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/imgheader2"
            android:textSize="20sp"
            android:text="@string/txtheader"
            android:id="@+id/textheader"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgheader2"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/view"
            android:layout_below="@+id/name"
            android:layout_marginTop="-3dp"
            android:background="@color/colorTurquesa"/>
    </RelativeLayout>
    <!--END HEADER-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/main">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image"
            android:layout_alignTop="@id/image"
            android:text="@string/txt3"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image"
            android:layout_alignBottom="@id/image"
            android:text="@string/txt3"
            android:textColor="#000"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/txt3"
        android:id="@+id/text3"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1.0"
        android:gravity="center"
        android:id="@+id/button1">
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/button1"
            android:theme="@style/MyButton"
            android:layout_weight="0.33"
            android:id="@id/text1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1.0"
        android:id="@+id/button2">

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/button2"
            android:onClick="goRecoverpw"
            android:layout_gravity="center_horizontal"
            android:theme="@style/MyButton"
            android:layout_weight="0.66" />
        <Space
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.24"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/button3"
            android:textSize="10dp"
            android:onClick="goLogin"
            android:theme="@style/MyButton"
            android:layout_weight="0.10" />
    </LinearLayout>

</LinearLayout>
